kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
  namespace: devops-app
  labels:
    app: devops-app
spec:
  selector:
    app: devops-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP
